@@ -11,6 +11,7 @@ Changelog for 1.4.4
 * (Bug Report 1229), added ID card and birthdate tracking (Chris T)
 * Fixed bug 1234, trying to save user before employee thows error (Chris T)
 * Fixed bug 1239, reopening on previous close throws error (Chris T)
+* Fixed upgrade bug, referential errors upgrading 1.2 data (Chris T)
 
 Chris T is Chris Travers
 
